# dataset-recorder

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/image/: CMakeLists.txt  Dataset.cpp  Dataset.h  Window.cpp  Window.h  main.cpp
cmake/: FindPortAudio.cmake  Findlibsndfile.cmake
src/: CMakeLists.txt  CameraManager.cpp  CameraManager.h  Dataset.cpp  Dataset.h  MicrophoneManager.cpp  MicrophoneManager.h  Window.cpp  Window.h  main.cpp
